Fixed header styling so that home button has a cursoin pointer to indicate its a button on non mobile screens

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -18,8 +18,6 @@
 	font-weight: bold;
 	letter-spacing: 0.125rem;
 	width: 33%;
-
-
 }
 
 .homeWrap {
@@ -43,30 +41,20 @@
 	justify-content: center;
 
 }
-.logoWrap:hover {
-	cursor: pointer;
-}
+
 .cartLogoWrap {
 	color: white;
 	display: flex;
 	justify-content: center;
 	
 }
-.cartLogoWrap:hover {
-	cursor: pointer;
-}
-/* * {
-	background: #000 !important;
-	color: #0f0 !important;
-	outline: solid #f00 1px !important;
-}
-*/
+
 
 @media (min-width:420px) {
 	.header {
 		justify-content: space-between;
 	}
-
+	
 	.logoWrap {
 		width: 15rem;
 	}
@@ -76,6 +64,20 @@
 
 	.homeWrap {
 		padding-left: .35rem;
+	}
+
+}
+
+@media (min-width:1020px) {
+	.homeWrap:hover {
+		cursor: pointer;
+	}
+
+	.cartLogoWrap:hover {
+		cursor: pointer;
+	}
+	.logoWrap:hover {
+		cursor: default;
 	}
 
 }
